--- a/index.html
+++ b/index.html
@@ -411,6 +411,8 @@
   </style>
 </head>
 <body ng-app="sudokuApp" ng-controller="sudokuCtrl">
+  <a href="https://twitter.com/krokrow" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @krokrow</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   <h3>문제 선택</h3>
   <select ng-model="selectedProv" ng-options="prov for prov in sampledata" ng-change="newgame()"></select><br>
   <input type="text" ng-model="inputProv" ng-maxlength="81" ng-change="inputgame()" size="83"></input><br>
